--- a/ReadPlayCode/Views/Home/Index.cshtml
+++ b/ReadPlayCode/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<ReadPlayCode.Models.IBlogPost>
+@{
+    ViewBag.Title = "AAA Page";
 }
 
 <div class="jumbotron">
@@ -18,14 +19,19 @@
         </p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div>
+        @foreach (var blogpost in Model)
+        {
+            <article data-role="blogpost">
+                <header>
+                    <h3>@blogpost.Title</h3>
+                    <h4>@blogpost.Author.DisplayName</h4>
+                    <h5>@blogpost.Created</h5>
+                </header>
+                <div data-role="blogpost-body">
+                    @Html.Raw(blogpost.Text)
+                </div>
+            </article>
+        }
     </div>
 </div>
